Added link to redirect to GitHub

--- a/index_EN.html
+++ b/index_EN.html
@@ -48,6 +48,9 @@
                         <li>
                             <a href="https://twitter.com/diogos88" class="active" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
                         </li>
+						<li>
+                            <a href="https://github.com/diogos88" class="active" target="_blank"><i class="fa fa-github"></i>GitHub</a>
+                        </li>
                         <li>
                             <a href="mailto:&#105;&#110;&#102;&#111;&#064;&#100;&#105;&#111;&#103;&#111;&#115;&#111;&#097;&#114;&#101;&#115;&#046;&#099;&#097;" class="active" ><i class="fa fa-envelope"></i>Email</a>
                         </li>
