--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <HTML>
 
 <HEAD>
-<TITLE>Diogo Soares</TITLE>
-<META HTTP-EQUIV="refresh" CONTENT="0;URL=en">
+    <TITLE>Diogo Soares</TITLE>
+    <META HTTP-EQUIV="refresh" CONTENT="0;URL=en">
 </HEAD>
 
 <BODY>
 
-Please go to <a href="en">Diogo Soares - Resume</a>
-
-Veuillez aller à <a href="fr">Diogo Soares - CV</a>
+    Please go to <a href="en">Diogo Soares - Resume</a> Veuillez aller ï¿½ <a href="fr">Diogo Soares - CV</a>
 
 </BODY>
 
