--- a/index_EN.html
+++ b/index_EN.html
@@ -1,106 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Diogo Soares</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Curriculum Vitae">
-        <meta name="author" content="Diogo Soares">
+<head>
+    <meta charset="utf-8">
+    <title>Diogo Soares</title>
 
-        <link href="css/master.css" rel="stylesheet">
-        <link href="font-awesome-4.1.0/css/font-awesome.css" rel="stylesheet">
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-        <link href="bootstrap/css/docs.css" rel="stylesheet">
-        <link href="bootstrap/js/google-code-prettify/prettify.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Curriculum Vitae">
+    <meta name="author" content="Diogo Soares">
 
-        <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-        <!--[if lt IE 9]>
+    <link href="css/master.css" rel="stylesheet">
+    <link href="font-awesome-4.1.0/css/font-awesome.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="bootstrap/css/docs.css" rel="stylesheet">
+    <link href="bootstrap/js/google-code-prettify/prettify.css" rel="stylesheet">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
           <script src="bootstrap/js/html5shiv.js"></script>
         <![endif]-->
 
-        <link rel="shortcut icon" href="favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
 
-        <script>
-            _386 = {onePass: true, speedFactor: 1.0};
-        </script>
-    </head>
+    <script>
+        _386 = {
+            onePass: true,
+            speedFactor: 1.0
+        };
+    </script>
+</head>
 
-    <body data-spy="scroll" data-target=".bs-docs-sidebar">
-        <div class="container">
-            <div class="jumbotron">
-                <h1>Diogo Soares</h1>
-                <p>
-                    Student in the Bachelor of Software Engineering at <a href="http://www.etsmtl.ca" target="_blank">École de Technologie Supérieure</a> in Canada.
+<body data-spy="scroll" data-target=".bs-docs-sidebar">
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Diogo Soares</h1>
+            <p>
+                Student in the Bachelor of Software Engineering at <a href="http://www.etsmtl.ca" target="_blank">École de Technologie Supérieure</a> in Canada.
+            </p>
+        </div>
+        <div>
+            <div class="span3 bs-docs-sidebar">
+                <ul class="nav nav-list bs-docs-sidenav" style="text-align: left">
+                    <li>
+                        <img src="http://m.c.ctrl.licdn.com/media/p/8/000/2c7/3a5/38a11e5.jpg" alt="" width="100%" height="175px" />
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a href="http://www.linkedin.com/in/soaresdiogo" class="active" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a>
+                    </li>
+                    <li>
+                        <a href="https://twitter.com/diogos88" class="active" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/diogos88" class="active" target="_blank"><i class="fa fa-github"></i>GitHub</a>
+                    </li>
+                    <li>
+                        <a href="mailto:&#105;&#110;&#102;&#111;&#064;&#100;&#105;&#111;&#103;&#111;&#115;&#111;&#097;&#114;&#101;&#115;&#046;&#099;&#097;" class="active"><i class="fa fa-envelope"></i>Email</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a href="fr" class="active"><i class="fa fa-language"></i>Français</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="span9">
+                <p class="lead" style='text-align:justify'>
+                    Hi!,
+                    <br/>
+                    <br/> I'm a person with a simple personality who likes new technologies and making cool stuff to simplify my life in day to day. I keep myself updated on three subjects who are also my passions: New Technologies, Photography and Cars.
+                    <br/>
+                    <br/> Always be willing to take up new challenges. You can reach me directly by <a href="mailto:&#105;&#110;&#102;&#111;&#064;&#100;&#105;&#111;&#103;&#111;&#115;&#111;&#097;&#114;&#101;&#115;&#046;&#099;&#097;">mail</a> or by <a href="http://www.linkedin.com/in/soaresdiogo"
+                    target="_blank">LinkedIn</a>.
                 </p>
-            </div>
-            <div>
-                <div class="span3 bs-docs-sidebar">
-                    <ul class="nav nav-list bs-docs-sidenav" style="text-align: left">
-                        <li>
-                            <img src="http://m.c.ctrl.licdn.com/media/p/8/000/2c7/3a5/38a11e5.jpg" alt="" width="100%" height="175px" />
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="http://www.linkedin.com/in/soaresdiogo" class="active" target="_blank"><i class="fa fa-linkedin"></i>LinkedIn</a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/diogos88" class="active" target="_blank"><i class="fa fa-twitter"></i>Twitter</a>
-                        </li>
-						<li>
-                            <a href="https://github.com/diogos88" class="active" target="_blank"><i class="fa fa-github"></i>GitHub</a>
-                        </li>
-                        <li>
-                            <a href="mailto:&#105;&#110;&#102;&#111;&#064;&#100;&#105;&#111;&#103;&#111;&#115;&#111;&#097;&#114;&#101;&#115;&#046;&#099;&#097;" class="active" ><i class="fa fa-envelope"></i>Email</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="fr" class="active"><i class="fa fa-language"></i>Français</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="span9">
-                    <p class="lead" style='text-align:justify'>
-                        Hi!,
-                        <br/><br/>
-                        I'm a person with a simple personality who likes new technologies and making cool stuff to simplify my life in day to day. I keep myself updated on three subjects who are also my passions: New Technologies, Photography and Cars.
-                        <br/><br/>
-                        Always be willing to take up new challenges. You can reach me directly by <a href="mailto:&#105;&#110;&#102;&#111;&#064;&#100;&#105;&#111;&#103;&#111;&#115;&#111;&#097;&#114;&#101;&#115;&#046;&#099;&#097;">mail</a> or by <a href="http://www.linkedin.com/in/soaresdiogo" target="_blank">LinkedIn</a>.  
-                    </p>
-                    <div class="lead">
-                        Bachelor progress:
-                        <div class="progress progress-success">
-                            <div class="bar" style="width: 90%"></div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="footer">
-                        <p class="pull-right">&copy; Diogo Soares 2014 - using <a href="http://kristopolous.github.io/BOOTSTRA.386/" target="_blank">BOOTSTRA.386</a></p>
+                <div class="lead">
+                    Bachelor progress:
+                    <div class="progress progress-success">
+                        <div class="bar" style="width: 90%"></div>
                     </div>
                 </div>
+                <hr>
+                <div class="footer">
+                    <p class="pull-right">&copy; Diogo Soares 2014 - using <a href="http://kristopolous.github.io/BOOTSTRA.386/" target="_blank">BOOTSTRA.386</a></p>
+                </div>
             </div>
-        </div> 
+        </div>
+    </div>
 
-        <script src="bootstrap/js/jquery.js"></script>
-        <script src="bootstrap/js/bootstrap-386.js"></script>
-        <script src="bootstrap/js/bootstrap-transition.js"></script>
-        <script src="bootstrap/js/bootstrap-alert.js"></script>
-        <script src="bootstrap/js/bootstrap-modal.js"></script>
-        <script src="bootstrap/js/bootstrap-dropdown.js"></script>
-        <script src="bootstrap/js/bootstrap-scrollspy.js"></script>
-        <script src="bootstrap/js/bootstrap-tab.js"></script>
-        <script src="bootstrap/js/bootstrap-tooltip.js"></script>
-        <script src="bootstrap/js/bootstrap-popover.js"></script>
-        <script src="bootstrap/js/bootstrap-button.js"></script>
-        <script src="bootstrap/js/bootstrap-collapse.js"></script>
-        <script src="bootstrap/js/bootstrap-carousel.js"></script>
-        <script src="bootstrap/js/bootstrap-typeahead.js"></script>
-        <script src="bootstrap/js/bootstrap-affix.js"></script>
+    <script src="bootstrap/js/jquery.js"></script>
+    <script src="bootstrap/js/bootstrap-386.js"></script>
+    <script src="bootstrap/js/bootstrap-transition.js"></script>
+    <script src="bootstrap/js/bootstrap-alert.js"></script>
+    <script src="bootstrap/js/bootstrap-modal.js"></script>
+    <script src="bootstrap/js/bootstrap-dropdown.js"></script>
+    <script src="bootstrap/js/bootstrap-scrollspy.js"></script>
+    <script src="bootstrap/js/bootstrap-tab.js"></script>
+    <script src="bootstrap/js/bootstrap-tooltip.js"></script>
+    <script src="bootstrap/js/bootstrap-popover.js"></script>
+    <script src="bootstrap/js/bootstrap-button.js"></script>
+    <script src="bootstrap/js/bootstrap-collapse.js"></script>
+    <script src="bootstrap/js/bootstrap-carousel.js"></script>
+    <script src="bootstrap/js/bootstrap-typeahead.js"></script>
+    <script src="bootstrap/js/bootstrap-affix.js"></script>
 
-        <script src="bootstrap/js/holder/holder.js"></script>
-        <script src="bootstrap/js/google-code-prettify/prettify.js"></script>
+    <script src="bootstrap/js/holder/holder.js"></script>
+    <script src="bootstrap/js/google-code-prettify/prettify.js"></script>
 
-        <script src="bootstrap/js/application.js"></script>
-    </body>
+    <script src="bootstrap/js/application.js"></script>
+</body>
+
 </html>
